--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -1,8 +1,8 @@
 #Spring Boot server configuration
 
-spring.datasource.url= jdbc:SEU_USUARIOql://localhost:5432/springboot-jdev-treinamento
-spring.datasource.username= SEU_USUARIO
-spring.datasource.password= SUA_SENHA
+spring.datasource.url= <seu-banco>
+spring.datasource.username= <seu-nome-de-usuario>
+spring.datasource.password= <sua-senha>
 
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
